--- a/html/Menu.htm
+++ b/html/Menu.htm
@@ -378,7 +378,7 @@ more <a href="">help is linked by selecting</a> for buttons with underlined text
 <div class="tree">
 <p>Press control or touch screen for menu</p>
 <ul>
-  <li id="p90"><p><a href="#U1">DISPLAY</a></p>
+  <li id="p60"><p><a href="#U1">DISPLAY</a></p>
     <ul>
       <li id="u30"><p><tt>2/4 limit for aa/ch firmware</tt><a href="#U1L1">TRACE</a></p>
         <dl>
@@ -449,10 +449,10 @@ more <a href="">help is linked by selecting</a> for buttons with underlined text
       </li>
       <li><p><tt>select port to measure;<br>
 	works for 2 and 4 trace firmware</tt>CHANNEL</p>
-        <ul>
-	  <li><p>CH0 REFLECT</p></li>
-	  <li><p>CH1 THROUGH</p></li>
-        </ul>
+        <dl>
+	  <dt><p>CH0 REFLECT</p></dt>
+	  <dt><p>CH1 THROUGH</p></dt>
+        </dl>
       </li>
     </ul>
   </li>
