moved CHANNEL up

--- a/html/Menu.htm
+++ b/html/Menu.htm
@@ -411,7 +411,7 @@ more <a href="">help is linked by selecting</a> for buttons with underlined text
 	  </dt>
         </dl>
       </li>
-      <li id="p40"><p>SCALE</p>
+      <li id="u30"><p>SCALE</p>
         <dl>
           <dt id="p60">
 	    <p><a href="#U131">SCALE/DIV</a></p>
@@ -427,6 +427,13 @@ more <a href="">help is linked by selecting</a> for buttons with underlined text
 		 <a href="#U134">ELECTRICAL DELAY</a></p>
 	      <p><tt>touch below menu to launch</tt>NUM KEYS</p>
 	  </dt>
+        </dl>
+      </li>
+      <li><p><tt>select port to measure;<br>
+	works for 2 and 4 trace firmware</tt>CHANNEL</p>
+        <dl>
+	  <dt><p>CH0 REFLECT</p></dt>
+	  <dt><p>CH1 THROUGH</p></dt>
         </dl>
       </li>
       <li><p><tt>for TDR</tt><a href="https://groups.io/g/nanovna-users/attachment/3083/0/TDR.pdf">TRANSFORM</a></p>
@@ -446,13 +453,6 @@ more <a href="">help is linked by selecting</a> for buttons with underlined text
 	      <p><tt>touch below menu to launch</tt>NUM KEYS</p>
           </dt>
         </dl> 
-      </li>
-      <li><p><tt>select port to measure;<br>
-	works for 2 and 4 trace firmware</tt>CHANNEL</p>
-        <dl>
-	  <dt><p>CH0 REFLECT</p></dt>
-	  <dt><p>CH1 THROUGH</p></dt>
-        </dl>
       </li>
     </ul>
   </li>
