tool tip cleanup

--- a/html/Menu.htm
+++ b/html/Menu.htm
@@ -415,13 +415,14 @@ more <a href="">help is linked by selecting</a> for buttons with underlined text
         <dl>
           <dt id="p60">
 	    <p><a href="#U131">SCALE/DIV</a></p>
-	    <p><tt>position trace vertically</tt>
+	    <p><tt>scale trace vertically</tt>
                <a href="#U133">NUM KEYS</a></p>
           </dt>
           <dt><p><tt>touch nanoVNA screen below menu to launch numeric keypad;<br>
 		     click link here for numeric input discussion</tt>
 		 <a href="#U132">REFERENCE POSITION</a></p>
-	      <p><tt>touch below menu to launch</tt>NUM KEYS</p>
+	    <p><tt>position trace vertically</tt>
+               <a href="#U133">NUM KEYS</a></p>
 	  </dt>
 	  <dt><p><tt>compensate CAL by e.g. cable length in picoseconds</tt>
 		 <a href="#U134">ELECTRICAL DELAY</a></p>
@@ -450,7 +451,7 @@ more <a href="">help is linked by selecting</a> for buttons with underlined text
             </ul>
           </dt>
           <dt id="u120"><p><tt>tweak for actual distance</tt>VELOCITY FACTOR</p>
-	      <p><tt>touch below menu to launch</tt>NUM KEYS</p>
+	      <p>NUM KEYS</p>
           </dt>
         </dl> 
       </li>
@@ -526,10 +527,7 @@ more <a href="">help is linked by selecting</a> for buttons with underlined text
     </ul>
   </li>
   <li>
-    <p>
-    <tt>what is SAVE under CONFIG??</tt>
-	RECALL
-    </p>
+    <p>RECALL</p>
       <dl>
         <dt><p>RECALL 0</p></dt>
         <dt><p>RECALL 1</p></dt>
