--- a/html/Menu.htm
+++ b/html/Menu.htm
@@ -457,26 +457,26 @@ more <a href="">help is linked by selecting</a> for buttons with underlined text
       </li>
     </ul>
   </li>
-  <li id="p120"><p><a href="#U2">MARKER</a></p>
-    <dl>
-	<dt><p><tt>increase minimum sweep frequency<br>
-	to selected marker</tt>START</p></dt>
-	<dt><p><tt>decrease maximum sweep frequency<br>
-	to selected marker</tt>STOP</p></dt>
-	<dt><p><tt>shift center of frequency sweep<br>
-	to selected marker</tt>CENTER</p></dt>
-	<dt><p><tt>sweep frequency between 2 current markers</tt>SPAN</p></dt>
-	<dt><p><tt>with 2 markers enabled,
+  <li id="p60"><p><a href="#U2">MARKER</a></p>
+    <ul>
+	<li><p><tt>increase minimum sweep frequency<br>
+	to selected marker</tt>START</p></li>
+	<li><p><tt>decrease maximum sweep frequency<br>
+	to selected marker</tt>STOP</p></li>
+	<li><p><tt>shift center of frequency sweep<br>
+	to selected marker</tt>CENTER</p></li>
+	<li><p><tt>sweep frequency between 2 current markers</tt>SPAN</p></li>
+	<li><p><tt>with 2 markers enabled,
 	 marker 2 will read DELTA Frequency in relation to marker 1</tt>SELECT MARKER
-	  <ul>
-	  <li><p>MARKER 1</p></li>
-	  <li><p>MARKER 2</p></li>
-	  <li><p>MARKER 3</p></li>
-	  <li><p>MARKER 4</p></li>
-	  <li><p>ALL OFF</p></li>
-	  </ul>
-	</dt>
-    </dl>
+	  <dl>
+	  <dt><p>MARKER 1</p></dt>
+	  <dt><p>MARKER 2</p></dt>
+	  <dt><p>MARKER 3</p></dt>
+	  <dt><p>MARKER 4</p></dt>
+	  <dt><p>ALL OFF</p></dt>
+	  </dl>
+	</li>
+    </ul>
   </li>
   <li id="u20"><p><tt>set sweep or single frequency</tt>STIMULUS</p>
     <dl>
