--- a/html/Menu.htm
+++ b/html/Menu.htm
@@ -457,16 +457,9 @@ more <a href="">help is linked by selecting</a> for buttons with underlined text
       </li>
     </ul>
   </li>
-  <li id="p60"><p><a href="#U2">MARKER</a></p>
+  <li id="p20"><p><a href="#U2">MARKER</a></p>
     <ul>
-	<li><p><tt>increase minimum sweep frequency<br>
-	to selected marker</tt>START</p></li>
-	<li><p><tt>decrease maximum sweep frequency<br>
-	to selected marker</tt>STOP</p></li>
-	<li><p><tt>shift center of frequency sweep<br>
-	to selected marker</tt>CENTER</p></li>
-	<li><p><tt>sweep frequency between 2 current markers</tt>SPAN</p></li>
-	<li><p><tt>with 2 markers enabled,
+	<li id="u45"><p><tt>with 2 markers enabled,
 	 marker 2 will read DELTA Frequency in relation to marker 1</tt>SELECT MARKER
 	  <dl>
 	  <dt><p>MARKER 1</p></dt>
@@ -476,6 +469,13 @@ more <a href="">help is linked by selecting</a> for buttons with underlined text
 	  <dt><p>ALL OFF</p></dt>
 	  </dl>
 	</li>
+	<li><p><tt>increase minimum sweep frequency<br>
+	to selected marker</tt>START</p></li>
+	<li><p><tt>decrease maximum sweep frequency<br>
+	to selected marker</tt>STOP</p></li>
+	<li><p><tt>shift center of frequency sweep<br>
+	to selected marker</tt>CENTER</p></li>
+	<li><p><tt>sweep frequency between 2 current markers</tt>SPAN</p></li>
     </ul>
   </li>
   <li id="u20"><p><tt>set sweep or single frequency</tt>STIMULUS</p>
