--- a/html/Menu.htm
+++ b/html/Menu.htm
@@ -378,7 +378,7 @@ more <a href="">help is linked by selecting</a> for buttons with underlined text
 <div class="tree">
 <p>Press control or touch screen for menu</p>
 <ul>
-  <li id="p60"><p><a href="#U1">DISPLAY</a></p>
+  <li id="p20"><p><a href="#U1">DISPLAY</a></p>
     <ul>
       <li id="u30"><p><tt>2/4 limit for aa/ch firmware</tt><a href="#U1L1">TRACE</a></p>
         <dl>
@@ -392,14 +392,14 @@ more <a href="">help is linked by selecting</a> for buttons with underlined text
 	        select, toggle off/on</tt>TRACE 3</p></dt>
         </dl> 
       </li>
-      <li><p>FORMAT</p>
+      <li id="u20"><p>FORMAT</p>
         <dl>
           <dt><p><tt>measured magnitude log scaled</tt>LOGMAG</p></dt>
 	  <dt><p><tt>-180<=linear degrees<=+180</tt>PHASE</p></dt>
 	  <dt><p><tt>see TRANSFORM</tt>DELAY</p></dt>
 	  <dt><p><i>    </i>SMITH</p></dt>
 	  <dt><p><tt>Standing Wave Ratio</tt>SWR</p></dt>
-	  <dt><p><tt>..but better?</tt>MORE</p>
+	  <dt id="u20"><p><tt>..but better?</tt>MORE</p>
 	    <ul>
 	      <li><p><tt>(for S21) imaginary vs real</tt>POLAR</p></li>
 	      <li><p><tt>measured magnitude linear scaled</tt>LINEAR</p></li>
@@ -459,23 +459,23 @@ more <a href="">help is linked by selecting</a> for buttons with underlined text
   </li>
   <li id="p20"><p><a href="#U2">MARKER</a></p>
     <ul>
-	<li id="u45"><p><tt>with 2 markers enabled,
+      <li><p><tt>increase minimum sweep frequency<br>
+	to selected marker</tt>START</p></li>
+      <li><p><tt>decrease maximum sweep frequency<br>
+	to selected marker</tt>STOP</p></li>
+      <li id="u30"><p><tt>with 2 markers enabled,
 	 marker 2 will read DELTA Frequency in relation to marker 1</tt>SELECT MARKER
-	  <dl>
+        <dl>
 	  <dt><p>MARKER 1</p></dt>
 	  <dt><p>MARKER 2</p></dt>
 	  <dt><p>MARKER 3</p></dt>
 	  <dt><p>MARKER 4</p></dt>
 	  <dt><p>ALL OFF</p></dt>
-	  </dl>
-	</li>
-	<li><p><tt>increase minimum sweep frequency<br>
-	to selected marker</tt>START</p></li>
-	<li><p><tt>decrease maximum sweep frequency<br>
-	to selected marker</tt>STOP</p></li>
-	<li><p><tt>shift center of frequency sweep<br>
+        </dl>
+      </li>
+      <li><p><tt>shift center of frequency sweep<br>
 	to selected marker</tt>CENTER</p></li>
-	<li><p><tt>sweep frequency between 2 current markers</tt>SPAN</p></li>
+      <li><p><tt>sweep frequency between 2 current markers</tt>SPAN</p></li>
     </ul>
   </li>
   <li id="u20"><p><tt>set sweep or single frequency</tt>STIMULUS</p>
