--- a/html/Menu.htm
+++ b/html/Menu.htm
@@ -359,7 +359,7 @@ a:visited {
 
 div {
   position: absolute;
-  top: 20px;
+  top: 50px;
 }
 </style>
 </head>
@@ -369,10 +369,10 @@ div {
 
 <body translate="no">
 <base href="https://oristopo.github.io/nVhelp/html/nVhelp.htm">
-<h2 align=center><a href="#U0">nanoVNA</a> Menu for <font color=#999900><em>Sep 2019</em></font> firmware</h2>
 <p align=center>
+<font size=+1><a href="#U0">nanoVNA</a> Menu for <font color=#999900><em>Sep 2019</em></font> firmware</font><br>
+<a href="">help is linked by selecting</a> for buttons with underlined text<br>
 tool tips for many buttons are launched by hovering mouse pointer<br>
-more <a href="">help is linked by selecting</a> for buttons with underlined text<br>
 <em>some</em> submenus highlight <span style="background-color: #FFFFFF"><font color="black">ACTIVE</font></span> selection on LCD</p>
 
 <div class="tree">
