--- a/html/firmware.htm
+++ b/html/firmware.htm
@@ -148,13 +148,15 @@ which FWIW is identical to <code>DMR Aug 31</code> "Stuck on firmware?" append: 
 <dd>hwalker Sep 25  256 point FFT Firmware 
 <a href="https://groups.io/g/nanovna-users/attachment/3028/1/XENOMORPH%20firmware%20with%20FFT%20256,%20instead%20of%20128_1500.rar">email RAR attachment</a>
 
+<br><br><dt>DMR
+<dd>tweak colors to white <a href="https://groups.io/g/nanovna-users/attachment/3337/0/white.rar">email RAR attachment</a>
+<br><a href="https://groups.io/g/nanovna-users/message/4674">on-display voltage measurement</a> and
+ <a href="https://groups.io/g/nanovna-users/message/4666">voltmeter hack</a>
+
 </h4>
 <dl>
 <dt>pluto backup Sep 29 
 <dd><a href="https://groups.io/g/nanovna-users/message/3592">email</a>
-
-<br><br><dt>DMR tweak colors to white 
-<dd><a href="https://groups.io/g/nanovna-users/attachment/3337/0/white.rar">email RAR attachment</a>
 
 </dl>
 </dl>
