--- a/html/firmware.htm
+++ b/html/firmware.htm
@@ -109,11 +109,11 @@ or <code>800</code> versions for devices with weaker high frequency performance<
 
 
 <br><dt><a href="https://groups.io/g/nanovna-users/files/Firmware/All%20%28known%29%20publicly%20available%20NanoVNA%20DFU%20files%20from%20May%205,%202019%20through%20to%20Sept%2029,%202019/DMR/DMR-CLEAR_MEMORY_DFU.dfu">DMR-CLEAR_MEMORY_DFU.dfu</a> clears device flash memory.
-<dd>Your device will <em>not</em> again work until <em>after</em> re-loading <em>some other</em> firmware.<br>
-  It is used to "clean the slate" prior to installing <em>other</em> firmware, but is <em>rarely</em> needed.<br>
-Some few firmware installations fail until after first loading "DMR-CLEAR_MEMORY_DFU.dfu"
-<br>
-which FWIW is identical to <code>DMR Aug 31</code> "Stuck on firmware?" append: <a href="https://groups.io/g/nanovna-users/message/1583">FILL FF DFU.dfu</a>
+<dd>
+A few firmware installations fail until after first loading "DMR-CLEAR_MEMORY_DFU.dfu".<br>
+After loading it, your nanoVNA will <em>not</em> again work until <em>after</em> installing <em>other</em> firmware.<br>
+  It is used to "clean the slate" prior to installing e.g. <a href="#DMR"><em>DMR</em> firmwares</a>, but should <em>otherwise rarely</em> be needed.<br>
+This is identical to <code>DMR Aug 31</code> "Stuck on firmware?" append: <a href="https://groups.io/g/nanovna-users/message/1583">FILL FF DFU.dfu</a>
 </dl>
 <h4>
 <dl>
@@ -148,10 +148,11 @@ which FWIW is identical to <code>DMR Aug 31</code> "Stuck on firmware?" append: 
 <dd>hwalker Sep 25  256 point FFT Firmware 
 <a href="https://groups.io/g/nanovna-users/attachment/3028/1/XENOMORPH%20firmware%20with%20FFT%20256,%20instead%20of%20128_1500.rar">email RAR attachment</a>
 
-<br><br><dt>DMR
+<br><br><dt id="DMR">DMR firmwares
 <dd>tweak colors to white <a href="https://groups.io/g/nanovna-users/attachment/3337/0/white.rar">email RAR attachment</a>
 <br><a href="https://groups.io/g/nanovna-users/message/4674">on-display voltage measurement</a> and
  <a href="https://groups.io/g/nanovna-users/message/4666">voltmeter hack</a>
+<br><a href="https://groups.io/g/nanovna-users/message/4697">75-Ohm "device"</a> 12 Oct 2019
 
 </h4>
 <dl>
