--- a/html/firmware.htm
+++ b/html/firmware.htm
@@ -146,7 +146,8 @@ This is identical to <code>DMR Aug 31</code> "Stuck on firmware?" append: <a hre
 
 <br><br><dt>Xenomorph
 <dd>hwalker Sep 25  256 point FFT Firmware 
-<a href="https://groups.io/g/nanovna-users/attachment/3028/1/XENOMORPH%20firmware%20with%20FFT%20256,%20instead%20of%20128_1500.rar">email RAR attachment</a>
+<a href="https://groups.io/g/nanovna-users/attachment/3028/1/XENOMORPH%20firmware%20with%20FFT%20256,%20instead%20of%20128_1500.rar">email RAR attachment</a><br>
+<a href="https://groups.io/g/nanovna-users/message/4537">75 Ohm firmware (Aug-30-19) and instructions</a>
 
 <br><br><dt id="DMR">DMR firmwares
 <dd>tweak colors to white <a href="https://groups.io/g/nanovna-users/attachment/3337/0/white.rar">email RAR attachment</a>
