--- a/html/firmware.htm
+++ b/html/firmware.htm
@@ -120,9 +120,6 @@ This is identical to <code>DMR Aug 31</code> "Stuck on firmware?" append: <a hre
 <dt>Larry Rothman's <a href="https://groups.io/g/nanovna-users/files/Firmware/All%20%28known%29%20publicly%20available%20NanoVNA%20DFU%20files%20from%20May%205,%202019%20through%20to%20Sept%2029,%202019">Firmware Archive</a>
 <dd>some of that content is linked below
 
-<br><br><dt>10KHz-1.5GHz_05.10.2019.rar
-<dd>DMR <a href="https://groups.io/g/nanovna-users/message/4073">message append</a>
-
 <br><br><dt>Gen Hu
 <dd><a href="https://drive.google.com/drive/folders/1IRz6E1wlkRyV0u7sbqj0lhWST-GV1szY">Google Drive folder</a>
     &nbsp <a href="https://github.com/hugen79/NanoVNA-H/releases">GitHub Releases</a>
@@ -144,16 +141,24 @@ This is identical to <code>DMR Aug 31</code> "Stuck on firmware?" append: <a hre
 <a href="https://groups.io/g/nanovna-users/files/Firmware/NanoVNA%20firmware%20build%20by%20Erik">firmware folder</a>
 <dd> primarily intended for use with <a href="https://groups.io/g/nanovna-users/files/NanoVNA%20PC%20Software/TAPR%20VNA">TAPR VNA v4 PC software</a>
 
-<br><br><dt>Xenomorph
-<dd>hwalker Sep 25  256 point FFT Firmware 
-<a href="https://groups.io/g/nanovna-users/attachment/3028/1/XENOMORPH%20firmware%20with%20FFT%20256,%20instead%20of%20128_1500.rar">email RAR attachment</a><br>
-<a href="https://groups.io/g/nanovna-users/message/4537">75 Ohm firmware (Aug-30-19) and instructions</a>
-
 <br><br><dt id="DMR">DMR firmwares
-<dd>tweak colors to white <a href="https://groups.io/g/nanovna-users/attachment/3337/0/white.rar">email RAR attachment</a>
+<dd>10KHz-1.5GHz_05.10.2019.rar
+<a href="https://groups.io/g/nanovna-users/message/4073">message .rar attachment</a>
+
+<dd>tweak colors to white <a href="https://groups.io/g/nanovna-users/attachment/3337">message .rar attachment</a>
 <br><a href="https://groups.io/g/nanovna-users/message/4674">on-display voltage measurement</a> and
  <a href="https://groups.io/g/nanovna-users/message/4666">voltmeter hack</a>
 <br><a href="https://groups.io/g/nanovna-users/message/4697">75-Ohm "device"</a> 12 Oct 2019
+
+<br><br><dt>Xenomorph
+<dd>- 256 point FFT Firmware 
+<a href="https://groups.io/g/nanovna-users/attachment/3028/1/XENOMORPH%20firmware%20with%20FFT%20256,%20instead%20of%20128_1500.rar">email RAR attachment</a>
+(hwalker Sep 25)<br>
+- <a href="https://groups.io/g/nanovna-users/message/4537">75 Ohm firmware (Aug-30-19)</a>
+Z0-CENTER 75 Ohm:
+<br> &nbsp
+use 50-75 Ohm matching transformer at the input and output.
+<a href="http://www.cqham.ru/forum/showthread.php?40166-nanoVNA-%E8%E7-%CA%E8%F2%E0%FF&p=1673622&viewfull=1#post1673622"><img align=top src="75-50 Ohm.jpg"></a>
 
 </h4>
 <dl>
