--- a/html/firmware.htm
+++ b/html/firmware.htm
@@ -33,7 +33,7 @@
   <li><a href="https://groups.io/g/nanovna-users/files/Firmware/Windows%20guide%20on%20how%20to%20write%20firmware.pdf">Replace NanoVNA Firmware from Windows</a>
   <li><a href="https://cho45.github.io/NanoVNA-manual/">Replace NanoVNA Firmware from macOS or Ubuntu</a> <i>see Section 8.</i>
   <li><a href="https://groups.io/g/nanovna-users/message/3487">Android DfuSe programming</a>
-  <li>DfuSe fails? Use <a href="https://www.ebay.com/itm/293210793177">ST-Link</a> and hex format to <a href="https://groups.io/g/nanovna-users/topic/34149616">recover bricked devices</a>
+  <li>DfuSe fails? Use <a href="https://www.ebay.com/itm/293210793177">ST-Link</a> with hex format to <a href="https://groups.io/g/nanovna-users/topic/34149616">recover bricked devices</a>
   </ul>
 
 <br><dt><a href="https://www.st.com/en/development-tools/stsw-stm32080.html">STSW-STM32080 package</a>
@@ -85,7 +85,7 @@ their target audience to create create custom firmware installers motivated by t
 
 <details>
 
-<summary>click here for <font color="green">hugen</font> firmware naming conventions</summary>
+<summary>click here for <font color="green">HuGen</font> firmware naming conventions</summary>
 <br>
 A typical name is <code>NanoVNA-H_900_ch_20191003.dfu</code>
 <br><br>
@@ -94,8 +94,8 @@ and usually <em>without</em> <code>aa</code> versions with larger text<br>
 or <code>800</code> versions for devices with weaker high frequency performance<br>
 <br>
 <dt><code>NanoVNA-H</code>
-<dd>owner or special purpose.<br>  edy255 "owns" NanoVNA; Gen Hu "owns" NanoVNA-H
-<br>Gen Hu typically provides 4 versions for each release date.<br>
+<dd>owner or special purpose.<br>  edy255 "owns" NanoVNA; HuGen "owns" NanoVNA-H
+<br>HuGen typically provided 4 versions for each release date.<br>
 <dt><code>900</code>
 <dd>most devices can overclock for 900MHz third harmonic. <br> To avoid artifacts with weaker devices, use <code>800</code>
 <dt><code>aa</code>
@@ -120,20 +120,14 @@ This is identical to <code>DMR Aug 31</code> "Stuck on firmware?" append: <a hre
 <dt>Larry Rothman's <a href="https://groups.io/g/nanovna-users/files/Firmware/All%20%28known%29%20publicly%20available%20NanoVNA%20DFU%20files%20from%20May%205,%202019%20through%20to%20Sept%2029,%202019">Firmware Archive</a>
 <dd>some of that content is linked below
 
-<br><br><dt>Gen Hu
-<dd><a href="https://drive.google.com/drive/folders/1IRz6E1wlkRyV0u7sbqj0lhWST-GV1szY">Google Drive folder</a>
-    &nbsp <a href="https://github.com/hugen79/NanoVNA-H/releases">GitHub Releases</a>
-<ul compact>
-  <li><a href="https://drive.google.com/drive/folders/1H_l_3vnXSgg6AOIngvMEsPpIvRVTG7hq">NanoVNA-H-20191009</a> Oct 9, 2109 by Gen Hu, nanoVNA-H owner
-  <li>Release Notes 
-   <a href="https://groups.io/g/nanovna-users/files/Firmware/hugen%27s%20firmware%20release%20notes.pdf">PDF</a>
+<br><br><dt>HuGen's <a href="https://drive.google.com/drive/folders/1IRz6E1wlkRyV0u7sbqj0lhWST-GV1szY">Google Drive folder</a>,
+    &nbsp <a href="https://github.com/hugen79/NanoVNA-H/releases">GitHub Releases</a>, &nbsp
+   <a href="https://groups.io/g/nanovna-users/files/Firmware/hugen%27s%20firmware%20release%20notes.pdf">Release Notes</a> PDF
+<dd> <a href="https://drive.google.com/drive/folders/1H_l_3vnXSgg6AOIngvMEsPpIvRVTG7hq">NanoVNA-H-20191009</a> Oct 9, 2109 by Gen Hu, nanoVNA-H owner
+  <br> &nbsp - latest "aa" (larger text, 2 trace) firmware no longer requires separate clear memory download
+  <br>(product?) <a href="https://drive.google.com/drive/folders/1IZEtx2YdqchaTO8Aa9QbhQ8g_Pr5iNhr">Google Drive folder</a>
 
-  <li>(product?) <a href="https://drive.google.com/drive/folders/1IZEtx2YdqchaTO8Aa9QbhQ8g_Pr5iNhr">Google Drive folder</a>
-
-  <li>latest "aa" (larger text, 2 trace) firmware no longer requires separate clear memory download
-</ul>
-
-<dt>edy255 <a href="https://github.com/ttrftech/NanoVNA/releases">GitHub Releases</a> &nbsp <a href="https://circleci.com/gh/ttrftech/NanoVNA">change log</a>
+<br><br><dt>edy255's <a href="https://github.com/ttrftech/NanoVNA/releases">GitHub Releases</a> &nbsp <a href="https://circleci.com/gh/ttrftech/NanoVNA">change log</a>
  &nbsp <a href="https://cho45.stfuawsc.com/NanoVNA/dfu.html">nightly builds</a>
 <dd>most other firmwares sync to edy255..
 
@@ -141,7 +135,7 @@ This is identical to <code>DMR Aug 31</code> "Stuck on firmware?" append: <a hre
 <a href="https://groups.io/g/nanovna-users/files/Firmware/NanoVNA%20firmware%20build%20by%20Erik">firmware folder</a>
 <dd> primarily intended for use with <a href="https://groups.io/g/nanovna-users/files/NanoVNA%20PC%20Software/TAPR%20VNA">TAPR VNA v4 PC software</a>
 
-<br><br><dt id="DMR">DMR firmwares
+<br><br><dt id="DMR">DMR's firmwares
 <dd>10KHz-1.5GHz_05.10.2019.rar
 <a href="https://groups.io/g/nanovna-users/message/4073">message .rar attachment</a>
 
