DMR touchscreen test

--- a/html/firmware.htm
+++ b/html/firmware.htm
@@ -140,6 +140,7 @@ or <code>800</code> versions for devices with weaker high frequency performance<
 <br><a href="https://groups.io/g/nanovna-users/message/4674">on-display voltage measurement</a> and
  <a href="https://groups.io/g/nanovna-users/message/4666">voltmeter hack</a>
 <br><a href="https://groups.io/g/nanovna-users/message/4697">75-Ohm "device"</a> 12 Oct 2019
+<br><a href="https://groups.io/g/nanovna-users/message/4778">touchscreen test</a>
 
 <br><br><dt><font size=+1><b>Xenomorph</b></font>
 <dd>- 256 point FFT Firmware 
