--- a/html/firmware.htm
+++ b/html/firmware.htm
@@ -83,9 +83,20 @@ their target audience to create create custom firmware installers motivated by t
 <br><dt><font size=+1><b><a href="https://groups.io/g/nanovna-users/files/Firmware/All%20%28known%29%20publicly%20available%20NanoVNA%20DFU%20files%20from%20May%205,%202019%20through%20to%20Sept%2029,%202019/DMR/DMR-CLEAR_MEMORY_DFU.dfu">DMR-CLEAR_MEMORY_DFU.dfu</a></b></font>
 <dd>
 A few firmware installations fail until after first loading "DMR-CLEAR_MEMORY_DFU.dfu".<br>
-After loading it, your nanoVNA will <em>not</em> again work until <em>after</em> installing <em>other</em> firmware.<br>
+After loading this, your nanoVNA will <em>not</em> again work until <em>after</em> installing <em>other</em> firmware.<br>
   It is used to "clean the slate" prior to installing e.g. <a href="#DMR"><em>DMR</em> firmwares</a>, but should <em>otherwise rarely</em> be needed.<br>
-This is identical to <code>DMR Aug 31</code> "Stuck on firmware?" append: <a href="https://groups.io/g/nanovna-users/message/1583">FILL FF DFU.dfu</a>
+  This is identical to <code>DMR Aug 31</code> "Stuck on firmware?" append: <a href="https://groups.io/g/nanovna-users/message/1583">FILL FF DFU.dfu</a>
+
+<details>
+<summary>click here for <b>cleaning settings to default states</b> in recent firmware</summary>
+
+<p align=left> (<i>thanks to QRP</i>) <img align=right src="PuTTY.gif">
+<br> &nbsp - connect to your NanoVNA with e.g. <a href="https://putty.org/">PuTTY</a>
+<br> &nbsp - enter <code>help</code> to list all supported commands
+<br> &nbsp - entering <code>clearconfig</code> resets all configuration settings to defaults
+<br> &nbsp - power nanoVNA off and on for default settings to take effect
+</p>
+</details>
 
 <br><br><dt><font size=+1><b>Larry Rothman's <a href="https://groups.io/g/nanovna-users/files/Firmware/All%20%28known%29%20publicly%20available%20NanoVNA%20DFU%20files%20from%20May%205,%202019%20through%20to%20Sept%2029,%202019">Firmware Archive</a></b></font>
 <dd>some of that content is linked below
@@ -96,7 +107,7 @@ This is identical to <code>DMR Aug 31</code> "Stuck on firmware?" append: <a hre
 <br>
 <details  style="background-color:powderblue;">
 
-<summary>click here for <font color="green">HuGen</font> firmware naming conventions</summary>
+<summary>click here for <font color="green">HuGen</font> firmware naming conventions and differences from edy255 firmware</summary>
 A typical name is <code>NanoVNA-H_900_ch_20191003.dfu</code>
 <br><br>
 Many special firmware are available with different naming,<br>
@@ -106,15 +117,25 @@ or <code>800</code> versions for devices with weaker high frequency performance<
 <dt><code>NanoVNA-H</code>
 <dd>owner or special purpose.<br>  edy255 "owns" NanoVNA; HuGen "owns" NanoVNA-H
 <br>HuGen typically provided 4 versions for each release date.<br>
-<dt><code>900</code>
-<dd>most devices can overclock for 900MHz third harmonic. <br> To avoid artifacts with weaker devices, use <code>800</code>
-<dt><code>aa</code>
-<dd>"Antenna Analyzer" limited to 2 traces but usefully larger text. <br>Use <code>ch</code> for 4 traces, but smaller text
+<dt><code>900</code> &nbsp <- <i><b>obsolete</b></i>
+<dd>most devices can overclock for 900MHz third harmonic. <br> To avoid artifacts with weaker devices, use <code>800</code> firmware versions
+<br>since <code>20191009</code>, overclock tuning is user-adjustable
+<dt><code>aa / ch</code>
+<dd><code>aa</code> (Antenna Analyzer) limited to 2 traces but usefully larger text. <br>Use <code>ch</code> for 4 traces, but smaller text
 <dt><code>20191003</code>
-<dd>date code; newer is not always better.  <br>Some group messages <a href="https://groups.io/g/nanovna-users/search?d=0&ev=false&q=firmware+bug">report bugs</a>..  
+<dd>date code; newer is <i>not always</i> better (but e.g. <code>20191009</code> <b>is better than</b> <code>20191003</code>).
+  <br>Some group messages <a href="https://groups.io/g/nanovna-users/search?d=0&ev=false&q=firmware+bug">report bugs</a>..  
 <dt><code>.dfu</code>
 <dd> format for DFU utilities, e.g. verify that firmware matches USB device ID<br>
 <code>.hex</code> is simpler, lacks ID matching.  DFU utility can convert either way.
+<br>
+<dt><b>differences from edy255 firmware</b> <i>thanks to QRP</i>
+<dd>1) hugen79 firmware has imbalance gain correction, which is missing from edy555 firmware<br>
+2) hugen79 firmware has a little different logic for frequency band/gain change.<br>
+3) hugen79 firmware has correct default touch calibration,<br>
+ &nbsp which works ok with NanoVNA-H hardware even with no touch calibration.<br>
+ &nbsp edy555 firmware default touch calibration is incompatible with NanoVNA-H hardware;<br>
+ &nbsp <b><i>touch screen calibration is required after installing edy555 firmware</i></b>.
 <br>
 <br>
 </details>
