--- a/html/firmware.htm
+++ b/html/firmware.htm
@@ -80,13 +80,8 @@ their target audience to create create custom firmware installers motivated by t
 
 <br><dt>
 
-<br><dt><font size=+1><b><a href="https://groups.io/g/nanovna-users/files/Firmware/All%20%28known%29%20publicly%20available%20NanoVNA%20DFU%20files%20from%20May%205,%202019%20through%20to%20Sept%2029,%202019/DMR/DMR-CLEAR_MEMORY_DFU.dfu">DMR-CLEAR_MEMORY_DFU.dfu</a></b></font>
+<br><dt><font size=+1><b>Clearing nanoDNA flash memory</b></font>
 <dd>
-A few firmware installations fail until after first loading "DMR-CLEAR_MEMORY_DFU.dfu".<br>
-After loading this, your nanoVNA will <em>not</em> again work until <em>after</em> installing <em>other</em> firmware.<br>
-  It is used to "clean the slate" prior to installing e.g. <a href="#DMR"><em>DMR</em> firmwares</a>, but should <em>otherwise rarely</em> be needed.<br>
-  This is identical to <code>DMR Aug 31</code> "Stuck on firmware?" append: <a href="https://groups.io/g/nanovna-users/message/1583">FILL FF DFU.dfu</a>
-
 <details>
 <summary>click here for <b>cleaning settings to default states</b> in recent firmware</summary>
 
@@ -96,6 +91,16 @@ After loading this, your nanoVNA will <em>not</em> again work until <em>after</e
 <br> &nbsp - entering <code>clearconfig</code> resets all configuration settings to defaults
 <br> &nbsp - power nanoVNA off and on for default settings to take effect
 </p>
+</details>
+<details>
+<summary>click here for <b> 
+<a href="https://groups.io/g/nanovna-users/files/Firmware/All%20%28known%29%20publicly%20available%20NanoVNA%20DFU%20files%20from%20May%205,%202019%20through%20to%20Sept%2029,%202019/DMR/DMR-CLEAR_MEMORY_DFU.dfu">DMR-CLEAR_MEMORY_DFU.dfu</a></b></summary
+<dt>
+A <i>few</i> firmware installations fail until after first loading "DMR-CLEAR_MEMORY_DFU.dfu".<br>
+After loading this, your nanoVNA will <em>not</em> again work until <em>after</em> installing <em>other</em> firmware.<br>
+  It is used to "clean the slate" prior to installing e.g. <a href="#DMR"><em>DMR</em> firmwares</a>, but should <em>otherwise rarely</em> be needed.<br>
+  This is identical to <code>DMR Aug 31</code> "Stuck on firmware?" append: <a href="https://groups.io/g/nanovna-users/message/1583">FILL FF DFU.dfu</a>
+
 </details>
 
 <br><br><dt><font size=+1><b>Larry Rothman's <a href="https://groups.io/g/nanovna-users/files/Firmware/All%20%28known%29%20publicly%20available%20NanoVNA%20DFU%20files%20from%20May%205,%202019%20through%20to%20Sept%2029,%202019">Firmware Archive</a></b></font>
