--- a/html/firmware.htm
+++ b/html/firmware.htm
@@ -80,7 +80,7 @@ their target audience to create create custom firmware installers motivated by t
 
 <br><dt>
 
-<br><dt><font size=+1><b>Clearing nanoDNA flash memory</b></font>
+<br><dt><font size=+1><b>Clearing nanoVNA flash memory</b></font>
 <dd>
 <details>
 <summary>click here for <b>cleaning settings to default states</b> in recent firmware</summary>
