--- a/html/hardware.htm
+++ b/html/hardware.htm
@@ -51,6 +51,8 @@ Variations may come
 </sl><br>
 <img src="https://groups.io/g/nanovna-users/attachment/158/0">
 <dl>
+<dt>NanoVNA-H V3.3
+<dd><a href="https://groups.io/g/nanovna-users/message/5074">5.1K Type-C CC resistors</a><br><img src="https://groups.io/g/nanovna-users/attachment/5074/0/nanoVNA_app.jpg">
 <dt>Hugen mid-October 2019
 <dd><a href="https://groups.io/g/nanovna-users/message/3356">full case</a><br>
 <img src="NanoVNA-H.png"><br clear=all>
