--- a/html/firmware.htm
+++ b/html/firmware.htm
@@ -167,6 +167,7 @@ or <code>800</code> versions for devices with weaker high frequency performance<
  <a href="https://groups.io/g/nanovna-users/message/4666">voltmeter hack</a>
 <br><a href="https://groups.io/g/nanovna-users/message/4697">75-Ohm "device"</a> 12 Oct 2019
 <br><a href="https://groups.io/g/nanovna-users/message/4778">touchscreen test</a>
+<br><a href="https://groups.io/g/nanovna-users/message/5031">console scan command: scanraw</a> 16 Oct 2019
 
 <br><br><dt><font size=+1><b>Xenomorph</b></font>
 <dd>- 256 point FFT Firmware 
