power supply and harmonic noise

--- a/html/IsolationNoise.htm
+++ b/html/IsolationNoise.htm
@@ -20,10 +20,10 @@
 <li><a href="https://groups.io/g/nanovna-users/topic/34300663#3132">Dynamic Range</a>
 <li><a href="https://groups.io/g/nanovna-users/message/2850">Noise vs Leakage on CH1</a>
 <li><a href="https://groups.io/g/nanovna-users/message/1990">S21 20dB dynamic range increase for 433MHz filter</a>
-<li><a href="https://groups.io/g/nanovna-users/message/1979">S21 measurement limitation analysis</a>
-  650MHz dip<br>
+<li><a href="https://groups.io/g/nanovna-users/message/1979">S21 measurement limitation analysis</a> 650MHz dip<br>
  from out-of-phase leakage cancelling 50dB attenuated signal
 <li><a href="https://groups.io/g/nanovna-users/message/1963">S21 @ 900Mhz limited by leakage</a>
+<li><a href="https://groups.io/g/nanovna-users/message/5107">Supply noise at 300-1600MHz</a>
 </ul>
 <li><a href="https://groups.io/g/nanovna-users/message/2687">hwalker LNA S21 procedure</a>
 <li><a href="https://groups.io/g/nanovna-users/attachment/768/0/Rytting_NAModels.pdf">Dour Rytting @ Agilent VNA Error Models</a>
