console `sample` command

--- a/html/IsolationNoise.htm
+++ b/html/IsolationNoise.htm
@@ -23,7 +23,8 @@
 <li><a href="https://groups.io/g/nanovna-users/message/1979">S21 measurement limitation analysis</a> 650MHz dip<br>
  from out-of-phase leakage cancelling 50dB attenuated signal
 <li><a href="https://groups.io/g/nanovna-users/message/1963">S21 @ 900Mhz limited by leakage</a>
-<li><a href="https://groups.io/g/nanovna-users/message/5107">Supply noise at 300-1600MHz</a>
+<li><a href="https://groups.io/g/nanovna-users/message/5107">Supply noise at 300-1600MHz</a> &nbsp
+    <a href="https://groups.io/g/nanovna-users/message/5111">absolute levels by console <code>sample</code> command</a>
 </ul>
 <li><a href="https://groups.io/g/nanovna-users/message/2687">hwalker LNA S21 procedure</a>
 <li><a href="https://groups.io/g/nanovna-users/attachment/768/0/Rytting_NAModels.pdf">Dour Rytting @ Agilent VNA Error Models</a>
