update menu title, kick off nVargs project

--- a/html/Menu.htm
+++ b/html/Menu.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Hnano</title>
+<title>nanoVNA-H Touchscreen Menu interactive map</title>
 <style>
     *, *::before, *::after {
   -webkit-box-sizing: border-box;
@@ -370,7 +370,7 @@ div {
 <body translate="no">
 <base href="https://oristopo.github.io/nVhelp/html/nVhelp.htm">
 <p align=center>
-<font size=+1><a href="#U0">nanoVNA</a> Menu for <font color=#999900><em>Sep 2019</em></font> firmware</font><br>
+<font size=+1><a href="#U0">nanoVNA-H</a> Touchscreen Menu interactive map for <font color=#999900><em>Sep until Oct 17 2019</em></font> firmware</font><br>
 <a href="">help is linked by selecting</a> for buttons with underlined text<br>
 tool tips for many buttons are launched by hovering mouse pointer<br>
 <em>some</em> submenus highlight <span style="background-color: #FFFFFF"><font color="black">ACTIVE</font></span> selection on LCD</p>
